--- a/src/app.json
+++ b/src/app.json
@@ -1,5 +1,8 @@
 {
-  "pages": ["pages/login/main"],
+  "pages": [
+    "pages/login/main",
+    "pages/index/main"
+  ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
